--- a/postgresql-service/src/main/resources/application.yml
+++ b/postgresql-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8082
 spring:
   cloud:
     nacos:
@@ -7,7 +7,7 @@ spring:
       discovery:
         cluster-name: Stuttgart # 集群名称
   application:
-    name: searching-service  #服务名称
+    name: postgresql-service  #服务名称
   datasource:
     url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
     username: root
