--- a/postgresql-service/src/main/resources/application.yml
+++ b/postgresql-service/src/main/resources/application.yml
@@ -9,7 +9,28 @@ spring:
   application:
     name: postgresql-service  #服务名称
   datasource:
-    url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.jdbc.Driver
+    dynamic:
+      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
+      datasource:
+        master:
+          url: jdbc:postgresql://129.69.209.197:30526/reposcatalogdb?currentSchema=public&characterEncoding=UTF-8
+          username: postgres
+          password: root
+          driver-class-name: org.postgresql.Driver # 3.2.0开始支持SPI可省略此配置
+        replica:
+          url: jdbc:postgresql://129.69.209.197:31190/reposcatalogdb?currentSchema=public&characterEncoding=UTF-8
+          username: postgres
+          password: root
+          driver-class-name: org.postgresql.Driver
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://129.69.209.197:30526/reposcatalogdb?currentSchema=public&characterEncoding=UTF-8
+#    username: postgres
+#    password: root
+
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false   #关闭驼峰转下划线
+  global-config:
+    db-config:
+      update-strategy: ignored    #null也会更新
