--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
         <module>user-service</module>
         <module>searching-service</module>
         <module>feign-api</module>
-        <module>postgresql-service</module>
-        <module>solr-service</module>
+        <module>database-service</module>
+        <module>searchEngine-service</module>
         <module>doc-service</module>
     </modules>
 
