--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
         cluster-name: Stuttgart # 集群名称
   application:
     name: user-service  #服务名称
-  datasource:
-    url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.jdbc.Driver
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
+#    username: root
+#    password: 123456
+#    driver-class-name: com.mysql.jdbc.Driver
 nfs:
   filepath: D:\test\
