merge: merge soheb branch, extract common module and some refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>feign-api</module>
         <module>database-service</module>
         <module>searchEngine-service</module>
+        <module>common</module>
     </modules>
 
     <properties>
