--- a/database-service/pom.xml
+++ b/database-service/pom.xml
@@ -70,6 +70,11 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-httpclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yang</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>cn.itcast.demo</groupId>-->
         <!--            <artifactId>feign-api</artifactId>-->
