--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -57,7 +57,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>com.yang</groupId>
+            <artifactId>database-service</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>cn.itcast.demo</groupId>-->
 <!--            <artifactId>feign-api</artifactId>-->
 <!--            <version>1.0</version>-->
