--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,4 +14,5 @@ spring:
 #    password: 123456
 #    driver-class-name: com.mysql.jdbc.Driver
 nfs:
-  filepath: D:\test\
+  filepath: /mnt/nfs-solr
+  ip: 129.69.209.197
