--- a/user-service/userservice.yaml
+++ b/user-service/userservice.yaml
@@ -1,37 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dbservice
+  name: userservice
   namespace: dev
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: dbservice
+      run: userservice
   template:
     metadata:
       labels:
-        run: dbservice
+        run: userservice
     spec:
       containers:
-        - image: 0yhr0/db-service:1.0.0
-          name: dbservice
+        - image: 0yhr0/user-service:1.0.0
+          name: userservice
           ports:
-            - containerPort: 8088
+            - containerPort: 8080
               protocol: TCP
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: dbservice
+  name: userservice
   namespace: dev
 spec:
   selector:
-    run: dbservice
+    run: userservice
   type: NodePort
   sessionAffinity: ClientIP
   ports: # 端口信息
     - protocol: TCP
-      port: 8088  # service端口
-      targetPort: 8088 # pod端口
-      nodePort: 31000 # 主机端口
+      port: 8080  # service端口
+      targetPort: 8080 # pod端口
+      nodePort: 31002 # 主机端口
