--- a/searchEngine-service/searchengineservice-1.2.0.yaml
+++ b/searchEngine-service/searchengineservice-1.2.0.yaml
@@ -1,37 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: userservice
+  name: searchengineservice
   namespace: dev
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: userservice
+      run: searchengineservice
   template:
     metadata:
       labels:
-        run: userservice
+        run: searchengineservice
     spec:
       containers:
-        - image: 0yhr0/user-service:1.1.0
-          name: userservice
+        - image: 0yhr0/searchengine-service:1.2.0
+          name: searchengineservice
           ports:
-            - containerPort: 8080
+            - containerPort: 8083
               protocol: TCP
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: userservice
+  name: searchengineservice
   namespace: dev
 spec:
   selector:
-    run: userservice
+    run: searchengineservice
   type: NodePort
   sessionAffinity: ClientIP
   ports: # 端口信息
     - protocol: TCP
-      port: 8080  # service端口
-      targetPort: 8080 # pod端口
-      nodePort: 31002 # 主机端口
+      port: 8083  # service端口
+      targetPort: 8083 # pod端口
+      nodePort: 31001 # 主机端口
