--- a/database-service/dbservice-1.2.2.yaml
+++ b/database-service/dbservice-1.2.2.yaml
@@ -1,37 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: searchengineservice
+  name: dbservice
   namespace: dev
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: searchengineservice
+      run: dbservice
   template:
     metadata:
       labels:
-        run: searchengineservice
+        run: dbservice
     spec:
       containers:
-        - image: 0yhr0/searchengine-service:1.2.0
-          name: searchengineservice
+        - image: 0yhr0/db-service:1.2.2
+          name: dbservice
           ports:
-            - containerPort: 8083
+            - containerPort: 8088
               protocol: TCP
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: searchengineservice
+  name: dbservice
   namespace: dev
 spec:
   selector:
-    run: searchengineservice
+    run: dbservice
   type: NodePort
   sessionAffinity: ClientIP
   ports: # 端口信息
     - protocol: TCP
-      port: 8083  # service端口
-      targetPort: 8083 # pod端口
-      nodePort: 31001 # 主机端口
+      port: 8088  # service端口
+      targetPort: 8088 # pod端口
+      nodePort: 31000 # 主机端口
