--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -72,7 +72,7 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-        <!-- 解决swagger报错Illegal DefaultValue null for parameter type integer -->
+        <!-- solve swagger error Illegal DefaultValue null for parameter type integer -->
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
